--- a/client/src/scss/_loader.scss
+++ b/client/src/scss/_loader.scss
@@ -8,7 +8,6 @@
   z-index: 999999999999999;
 }
 
-
 .loader {
   left: 40%;
   top: 40%;
@@ -34,8 +33,9 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  -webkit-animation: loader-1-outter 1s cubic-bezier(.42, .61, .58, .41) infinite;
-  animation: loader-1-outter 1s cubic-bezier(.42, .61, .58, .41) infinite;
+  -webkit-animation: loader-1-outter 1s cubic-bezier(0.42, 0.61, 0.58, 0.41)
+    infinite;
+  animation: loader-1-outter 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
 }
 
 .loader-1 .loader-inner {
@@ -48,8 +48,9 @@
   top: calc(50% - 20px);
   border-right: 0;
   border-top-color: transparent;
-  -webkit-animation: loader-1-inner 1s cubic-bezier(.42, .61, .58, .41) infinite;
-  animation: loader-1-inner 1s cubic-bezier(.42, .61, .58, .41) infinite;
+  -webkit-animation: loader-1-inner 1s cubic-bezier(0.42, 0.61, 0.58, 0.41)
+    infinite;
+  animation: loader-1-inner 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
 }
 
 @-webkit-keyframes loader-1-outter {
